testing route change

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,4 +1,4 @@
--#  This file is app/views/movies/index.html.haml
+-#  This file is app/views/items/index.html.haml
 %h1 All Movies
 
 %table#movies
