--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,6 +1,6 @@
 -# in app/views/users/show.html.haml
 
-%h2 Details about #{@user.user_name}
+%h2 Details about #{user.user_name}
 
 %ul#details
   %li
