--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,8 +1,3 @@
 -# in app/views/users/show.html.haml
 
-%h2 Details about #{user.user_name}
-
-%ul#details
-  %li
-    Updated:
-    = @user.updated_time
+%h2 Details about #{@user.user_name}
