--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -8,4 +8,4 @@
         %td= user.user_name 
         %td= user.firstname
         %td= user.lastname
-        %td= link_to "More about #{user.user_name}", users_path(user)
+        %td= link_to "More about #{user.user_name}", user_path(user)
