--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,19 @@
 -# in app/views/users/show.html.haml
 
 %h2 Details about #{@user.firstname}
+
+%h4
+    = @user.lastname
+    , 
+    = @user.firstname
+%br
+%p
+    = @user.user_name
+    %br
+    = @user.address
+    %br
+    = @user.phone
+
+= link_to 'Edit', edit_user_path(@user)
+= button_to 'Delete', movie_path(@user), :method => :delete, :confirm => 'Are you sure?'
+= link_to 'Back to user list', users_path
