--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -2,7 +2,7 @@
 
 %h1 Edit User Info
 
-= form_tag user_path(@user), :method => :put do
+= form_tag user_update_path(@user), :method => :put do
 
   = label :user, :user_name, 'User Name'
   = text_field :user, :user_name
