--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,14 +1,22 @@
-%h1 Create New Movie
+-# new.html.haml using partial
 
-= form_tag movies_path do
+%h1 User Info
 
-  = label :movie, :title, 'Title'
-  = text_field :movie, 'title'
+= form_tag user_path(@user), :method => :put do
 
-  = label :movie, :rating, 'Rating'
-  = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
+  = label :user, :user_name, 'User Name'
+  = text_field :user, :user_name
+  
+  = label :user, :firstname, 'First Name'
+  = text_field :user, :firstname
 
-  = label :movie, :release_date, 'Released On'
-  = date_select :movie, :release_date
+  = label :user, :lastname, 'Last Name'
+  = text_field :user, :lastname
+  
+  = label :user, :address, 'Address'
+  = text_field :user, :address
+  
+  = label :user, :phone, 'Phone Number'
+  = text_field :user, :phone
 
-  = submit_tag 'Save Changes'
+  = submit_tag 'Create User'
