fixed path name

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -2,7 +2,7 @@
 
 %h1 User Info
 
-= form_tag user_path do
+= form_tag users_path do
 
   = label :user, :user_name, 'User Name'
   = text_field :user, :user_name
