--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,8 @@
 
   %body
     %h1.title LendyHop
+    %h1.login
+      = link_to 'Login', login_user_path
     #main
       - if flash[:notice]
         #notice.message= flash[:notice]
