--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
   %body
     %h1.title LendyHop
     %h1.login
-      = link_to 'Login', edit_user_path
+      = link_to 'Login', users_path
     #main
       - if flash[:notice]
         #notice.message= flash[:notice]
