--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,8 +8,10 @@
 
   %body
     %h1.title LendyHop
+    
     %h1.login
-      = link_to 'Login', users_path
+      = link_to 'Login', login_users_path
+      
     #main
       - if flash[:notice]
         #notice.message= flash[:notice]
