--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
     %h1.title LendyHop
     
     %h1.login
-      = link_to 'Login', login_users_path
+      = link_to 'Login', login_user_path
       
     #main
       - if flash[:notice]
