--- a/app/views/users/login.html.haml
+++ b/app/views/users/login.html.haml
@@ -2,7 +2,7 @@
 
 %h1 Login
 
-= form_tag user_path(@user), :method => :put do
+= form_tag items_path, :method => :put do
 
   = label :user, :user_name, 'User Name'
   = text_field :user, :user_name
