--- a/app/views/users/login.html.haml
+++ b/app/views/users/login.html.haml
@@ -2,7 +2,10 @@
 
 %h1 Login
 
-= form_tag verify_user_path(@user), :method => :put do
+%div{ :class => 'full-center' }
+  = form_tag verify_user_path(@user), :method => :put do
 
-  = label :user, :user_name, 'User Name'
-  = text_field :user, :user_name
+    = label :user, :user_name, 'User Name'
+    = text_field :user, :user_name
+
+    = submit_tag 'Login'
