--- a/app/views/users/login.html.haml
+++ b/app/views/users/login.html.haml
@@ -3,7 +3,8 @@
 %h1 Login
 
 %div{ :class => 'full-center' }
-  = form_tag verify_user_path(@user_name), :method => :put do
+  = form_tag :action => 'verify'
+    //#verify_user_path(@user_name), :method => :put do
 
     = label :user, :user_name, 'User Name'
     = text_field :user, :user_name
