--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,11 @@
   %body
     %h1.title LendyHop
     
-    %h1.login
-      = link_to 'Login', login_user_path
+    -if (session[:user].nil || session[:user].id < 1)
+      = %h1.login
+        = link_to 'Login', login_user_path
+    -else
+      = %h1.login '#{session[:user].id}'
       
     #main
       - if flash[:notice]
