--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,11 +9,11 @@
   %body
     %h1.title LendyHop
     
-    - if (session[:user].nil || session[:user].id < 1)
-      %h1.login
+    %h1.login
+      - if (session[:user].nil || session[:user].id < 1)
         = link_to 'Login', login_user_path
-    - else
-      %h1.login '#{session[:user].user_name}'
+      - else
+        #{session[:user].user_name}
       
     #main
       - if flash[:notice]
