--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,9 +11,11 @@
     
     %h1.login
       - if (session[:user].nil || session[:user].id < 1)
-        = link_to 'Login', login_user_path
+        'Login'
+        // = link_to 'Login', login_user_path
       - else
-        #{session[:user].user_name}
+        'Logout'
+        // #{session[:user].user_name}
       
     #main
       - if flash[:notice]
