potential nil issue

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
     %h1.title LendyHop
     
     %h1.login
-      - if (session[:user].nil || session[:user].id < 1)
+      - if (session[:user] == nil || session[:user].id < 1)
         'Login'
         // = link_to 'Login', login_user_path
       - else
