--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
       - if (session[:user] == nil)
         = link_to 'Login', login_user_path
       - else
-        #{session[:user][:user_name]}
+        '#{session.user.user_name}'
       
     #main
       - if flash[:notice]
