--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -18,7 +18,9 @@
     
 = link_to 'Back to listings', items_path
 
-= form_tag submit_comment_path(@comment, @item), :method => :put do
+= form_tag submit_comment_path(@comment), :method => :put do
+
+    = hidden_field :comment, :item_id, @item.id
 
     = label :comment, :comment, 'Add Comment'
     = text_field :comment, :comment
