css test changes

--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -16,37 +16,16 @@ a {
   text-decoration: underline;
   font-weight: bold;
 }
-h1 {
-  color: maroon;
-  font-size: 150%;
-  font-style: italic;
-  display: block;
+#header {
   width: 100%;
-  border-bottom: 1px solid DarkSlateGrey;
+  background: #30B090;
+  border-bottom: solid 0.5em #20A090;
 }
-h1.title {
-  margin: 0 0 1em;
-  padding: 10px;
-  background-color: orange;
-  color: white;
-  border-bottom: 4px solid gold;
-  font-size: 2em;
-  font-style: normal;
+#title {
+  display: inline-block;
 }
-table#movies {
-  margin: 10px;
-  border-collapse: collapse;
-  width: 100%;
-  border-bottom: 2px solid black;
-}
-table#movies th {
-  border: 2px solid white;
-  font-weight: bold;
-  background-color: wheat;
-}
-table#movies th, table#movies td {
-  padding: 4px;
-  text-align: left;
+#login {
+  float: right;
 }
 #notice #warning {
   background: rosybrown;
