--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,13 +7,13 @@
     = csrf_meta_tags
 
   %body
-    %h1.title LendyHop
-    
-    %h1.login
-      - if (session[:user] == nil)
-        = link_to 'Login', login_user_path
-      - else
-        #{session[:user]["user_name"]}
+    %div.header
+      %h1.title LendyHop
+      %h4.login
+        - if (session[:user] == nil)
+          = link_to 'Login', login_user_path
+        - else
+          #{session[:user]["user_name"]}
       
     #main
       - if flash[:notice]
