--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -16,15 +16,15 @@ a {
   text-decoration: underline;
   font-weight: bold;
 }
-#header {
+.header {
   width: 100%;
   background: #30B090;
   border-bottom: solid 0.5em #20A090;
 }
-#title {
+.title {
   display: inline-block;
 }
-#login {
+.login {
   float: right;
 }
 #notice #warning {
