--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -20,12 +20,19 @@ a {
   width: 100%;
   background: #30B090;
   border-bottom: solid 0.5em #20A090;
+  padding: 0em 1.3em;
 }
 .title {
   display: inline-block;
+  color: #F4F4F4;
 }
 .login {
   float: right;
+  color: #F4F4F4;
+}
+.listing {
+  border-radius: 0.3em;
+  border: 0.1em solid #A0A0A0;
 }
 #notice #warning {
   background: rosybrown;
