--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -21,6 +21,7 @@ a {
   background: #30B090;
   border-bottom: solid 0.5em #20A090;
   padding: 0em 1.3em;
+  box-sizing: border-box;
 }
 .title {
   display: inline-block;
@@ -33,6 +34,16 @@ a {
 .listing {
   border-radius: 0.3em;
   border: 0.1em solid #A0A0A0;
+  margin-bottom: 0.6em;
+  display: table;
+}
+.listing > .l_left {
+  width: 80%;
+  display: table-cell;
+}
+.listing > .l_right {
+  text-align: right;
+  display: table-cell;
 }
 #notice #warning {
   background: rosybrown;
