--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -57,6 +57,9 @@ a {
 .listing > .l_right {
   display: table-cell;
 }
+.listing > .l_right > div > div {
+  display: inline-block;
+}
 .right {
   text-align: right;
 }
