--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -13,7 +13,7 @@
     %div.l_right
       %div
         %div Condition:
-        %div= item.condition
+        %div.right= item.condition
       %div
         %div Status:
-        %div= item.status
+        %div.right= item.status
