more styles; logout

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,8 +13,9 @@
         - if (session[:user] == nil)
           = link_to 'Login', login_user_path
         - else
-          #{session[:user]["user_name"]}
-      
+          %span #{session[:user]["user_name"]}
+          %br
+          %span= link_to 'Logout', logout_user_path
     #main
       - if flash[:notice]
         #notice.message= flash[:notice]
