--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -18,7 +18,6 @@ div#main {
 }
 a {
   background: transparent;
-  color: maroon;
   text-decoration: underline;
   font-weight: bold;
 }
@@ -58,7 +57,8 @@ a {
   display: table-cell;
 }
 .listing > .l_right > div {
-  display: table;
+  display: table-row;
+  float: right;
 }
 .listing > .l_right > div > div {
   display: table-cell;
@@ -67,10 +67,12 @@ a {
 .right {
   text-align: right;
 }
-#notice #warning {
-  background: rosybrown;
-  margin: 1em 0;
-  padding: 4px;
+#notice, #warning {
+  background: #F0F0C0;
+  color: #B00000;
+  font-weight: 600;
+  text-align: center;
+  padding: 0.4em;
 }
 form label {
   display: block;
