--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -34,11 +34,12 @@
 - @comments.each do |comment|
     %div.item_comment= comment.comment
 
-= form_tag submit_comment_path(@comment), :method => :put do
+- if (session[:user] != nil)
+    = form_tag submit_comment_path(@comment), :method => :put do
 
-    = hidden_field :comment, :item_id, :value => @item.id
+        = hidden_field :comment, :item_id, :value => @item.id
 
-    = label :comment, :comment, 'Add Comment'
-    = text_field :comment, :comment, style: "width:100%"
+        = label :comment, :comment, 'Add Comment'
+        = text_field :comment, :comment, style: "width:100%"
   
-    = submit_tag 'Submit'
+        = submit_tag 'Submit'
