--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,10 +1,9 @@
 -# in app/views/items/index.html.haml
 
-%h3
-  = link_to 'Create Listing', new_item_path
-    
-%h2 Available Items
-
+%div.ind_header
+  %h2 Available Items
+  %h4= link_to 'Create Listing', new_item_path
+  
 - @items.each do |item|
   %div.listing
     %div.l_left
