--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -24,17 +24,17 @@
             %span Tags
             %br
             %div.tags
-                @tags.each do |tag|
+                - @tags.each do |tag|
                     %div.tag
                         %span= tag.tag
-                        //- if (session[:user] != nil && session[:user]["id"] == @item.user["id"])
-                        //    = button_to 'X', tag_path(tag), :method => :delete
-                //%br
-                //- if (session[:user] != nil && session[:user]["id"] == @item.user["id"])
-                    //= form_tag submit_comment_path(@comment), :method => :put do
-                        //= hidden_field :tag, :item_id, :value => @item.id
-                        //= text_field :tag, :tag
-                        //= submit_tag '+'
+                        - if (session[:user] != nil && session[:user]["id"] == @item.user["id"])
+                            = button_to 'X', tag_path(tag), :method => :delete
+                %br
+                - if (session[:user] != nil && session[:user]["id"] == @item.user["id"])
+                    = form_tag submit_comment_path(@comment), :method => :put do
+                        = hidden_field :tag, :item_id, :value => @item.id
+                        = text_field :tag, :tag
+                        = submit_tag '+'
 
 - if (session[:user] != nil && session[:user]["id"] == @item.user["id"])
     = link_to 'Edit', edit_item_path(@item)
