--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -97,3 +97,22 @@ form label {
   font-weight: bold;
   color: maroon;
 }
+.tag {
+  border: solid 1px #C0C0FF;
+  display: inline-block;
+  padding: 0em 0em 0em 0.4em;
+  border-radius: 0.3em;
+  background: #DAF4FF;
+  margin: 0.15em;
+}
+.tag form {
+  display: inline-block;
+}
+.tag input[type="submit"] {
+  font-size: 80%;
+  background: none;
+  border: none;
+  border-left: solid 1px #C0C0FF;
+  cursor: pointer;
+  font-weight: 600;
+}
