--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -35,6 +35,9 @@
                         = hidden_field :tag, :item_id, :value => @item.id
                         = text_field :tag, :tag
                         = submit_tag '+'
+    %tr
+        %td{ :colspan => "2" }
+            = link_to 'Checkout', new_checkout_path(@item)
 
 - if (session[:user] != nil && session[:user]["id"] == @item.user["id"])
     = link_to 'Edit', edit_item_path(@item)
