--- a/app/views/checkouts/new.html.haml
+++ b/app/views/checkouts/new.html.haml
@@ -3,7 +3,7 @@
 %h2 Checkout an Item
 
 = form_tag checkouts_path do
-    %table.checkout
+    %table#checkout
         %thead
             %tr
                 %th
