--- a/app/views/checkouts/new.html.haml
+++ b/app/views/checkouts/new.html.haml
@@ -2,7 +2,7 @@
 
 %h2 Checkout an Item
 
-= form_tag checkout_path(@checkout) do
+= form_tag checkout_path do
     %table#checkout
         %thead
             %tr
