--- a/app/views/checkouts/new.html.haml
+++ b/app/views/checkouts/new.html.haml
@@ -1,6 +1,6 @@
 -# in app/views/checkout/index.html.haml
 
-%h2 Checkout an Item
+%h2 Checkout #{@item.title}
 
 = form_tag checkouts_path do
     = hidden_field :checkout, :item_id, :value => @item.id
@@ -46,3 +46,4 @@
                 %td= check_box_tag :ue
   
     = submit_tag 'Checkout'
+    = button_to 'Back', item_path(@item)
