--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -37,7 +37,10 @@
                         = submit_tag '+'
     %tr
         %td{ :colspan => "2" }
-            = link_to 'Checkout', item_checkout_path(@item)
+            - if (@checked_out)
+                = link_to 'Check Out', item_checkout_path(@item)
+            - else
+                = link_to 'Check In', tag_path(@item), :method => :delete
 
 - if (session[:user] != nil && session[:user]["id"] == @item.user["id"])
     = link_to 'Edit', edit_item_path(@item)
