--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -37,7 +37,7 @@
                         = submit_tag '+'
     %tr
         %td{ :colspan => "2" }
-            - if (@checked_out)
+            - if (!@checked_out)
                 = link_to 'Check Out', item_checkout_path(@item)
             - else
                 = link_to 'Check In', checkout_path(@item), :method => :delete
