--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,12 +25,12 @@
         = label :item, :title, 'Terms'
         = text_field :item, :title
 
-        = submit_tag 'Search
+        = submit_tag 'Search'
         
     #main
       - if flash[:notice]
         #notice.message= flash[:notice]
       - elsif flash[:warning]
-        #warning.message= flash[:warning]'
+        #warning.message= flash[:warning]
 
       = yield
